--- a/bitcoin-wallet-master/wallet/build.gradle
+++ b/bitcoin-wallet-master/wallet/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation "android.arch.persistence:db:1.1.1"
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
     implementation 'com.google.protobuf:protobuf-java:2.6.1'
@@ -29,6 +31,7 @@ dependencies {
     implementation 'com.github.tony19:logback-android:1.3.0-2'
     implementation 'com.google.code.findbugs:jsr305:2.0.3'
     testImplementation 'junit:junit:4.12'
+    compile 'com.android.volley:volley:1.0.0'
 }
 
 ext {
