--- a/bitcoin-wallet-master/wallet/AndroidManifest.xml
+++ b/bitcoin-wallet-master/wallet/AndroidManifest.xml
@@ -58,7 +58,7 @@
     <application
         android:name="de.schildbach.wallet.WalletApplication"
         android:allowBackup="false"
-        android:icon="@drawable/ic_app_color"
+        android:icon="@mipmap/ic_app_color_fg_108dp"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config" >
         <activity
